# Makefile.venv

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  Makefile.venv  README.md
.github/workflows/: main.yml  test.yml
docs/: README.md  howto-custom-venv-recipe.md  howto-pip-compile.md  howto-pipenv.md  howto-poetry.md
pypi/: Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
pypi/src/Makefile_venv/: __init__.py
pypi/tests/: test_installable.py
tests/: Makefile  README.md  __init__.py  common.py  test_check_version.py  test_checksum.py  test_dependencies.py  test_makefile.py  test_pip_compile.py  test_py_autodetect.py  test_pyproject_toml.py  test_recipe_override.py  test_release_checksum.py  test_release_version.py  test_requirements_txt.py  test_setup_py.py  test_spaces.py  test_venv.py
tests/data/: dependencies.mk  hello.py  pip-compile.mk  pyproject.toml  recipe-override.mk  setup.py
