[metadata]
name = Makefile.venv
url = https://github.com/sio/Makefile.venv
description = Seamlessly manage Python virtual environment with a Makefile
long_description = file: src/Makefile_venv/README.md
long_description_content_type = text/markdown
keywords = makefile, virtualenv, env
license = Apache-2.0
license_file = src/Makefile_venv/LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License


[options]
zip_safe = False
include_package_data = True
packages = Makefile_venv
package_dir =
    =src


[options.package_data]
* = Makefile.venv


[options.entry_points]
console_scripts =
    Makefile.venv = Makefile_venv:cli
